# IStudio-Compile

./: .gitmodules  CMakeLists.txt  IStudio.code-workspace
include/: CMakeLists.txt  Clouser.hpp  Compiler.hpp  Error.hpp  Exception.h  Exception.hpp  First.hpp  Follow.hpp  Goto.hpp  Grammar.hpp  Grammer.hpp  Lang.hpp  Lexer.hpp  Logger.hpp  Nonterminal.hpp  ParseTree.hpp  Parser.hpp  Rule.hpp  SentinalForm.hpp  State.hpp  Symbol.hpp  Terminal.hpp  Types_Compiler.hpp  UUID.h  Util.hpp  ast.hpp  backward.hpp  static_vector.hpp  token.hpp
include/fs/: CMakeLists.txt  File.hpp
src/: CMakeLists.txt  UUID.cpp  main.cpp
